@@ -16,6 +16,7 @@ Changes for 1.5:
 
 Changes for 1.4.3:
 
+ - [DEV-43] support of new macros {ITEM.VALUE}, {ITEM.VALUE1}, etc (Alexei)
  - [ZBX-102] Distributed monitoring: overwriting information (Sasha)
  - [ZBX-30,ZBX-47] better dependencies (Alexei)
  - [ZBX-48] fixed server crash if incorrect syntax of aggregate items is used (Alexei)
